...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCredentials"
        app:layout_constraintVertical_bias="0.486" />

    <!-- Go to sign up page -->
    <Button
        android:id="@+id/createNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#2196F3"
        android:background="#00FFFFFF"
        android:textSize="11sp"
...
